tenzir/tests/exec/operators/strict.txt
error: assertion failure
 --> exec/operators/strict.tql:3:17
  |
3 | strict { assert false }
  |                 ^^^^^ 
  |
